--- a/account/static/account/css/base.css
+++ b/account/static/account/css/base.css
@@ -1,445 +1,401 @@
 
 *{
-font-family: 'Nanum Gothic', sans-serif;
-}
-
-.doHyeon{
-    font-family:'Do Hyeon', sans-serif;
-}
-
-.blackHanSans{
-    font-family: 'Black Han Sans', sans-serif;
-}
-
-/* 득점순위 눌렀을 때 */
-.goalAverage > .scoreRank{
-    display:none;
-}
-
-.goalAverage > .gaRank{
-    display: block;
-}
-
-.gaRank{
-    display:none;
-}
-
-.editForm{
-    display: none;
-}
-
-.editToggle > .detail{
-    display:none;
-}
-
-.editToggle > .editForm{
-    display:flex;
-}
-
-/* 대댓글 창 먼저 안나오게 하기! */
-.replyAll{
-    display:none;
-}
-.replyEditForm{
-    display: none;
-}
-
-
-
-/* 대댓글수정 */
-.replyEditToggle > .replyDetail{
-    display:none;
-}
-
-.replyEditToggle > .replyEditForm{
-    display:flex;
-}      
-
-/* 답글 눌렀을 때 */
-.replyToggle{
-    display:block;
-}
-
-
-.allReplyCancel{
-    display:none;
-}
-
-.replyButton > .reply{
-    display:none;
-}
-
-.replyButton > .allReplyCancel{
-    display:block;
-}
-
-.bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-a.alram:hover{
-    background-color:peru !important;
-    text-decoration: none;
-}
-.alarm{
-    background-color: #EDF2F9;
-}
-
-@media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-    font-size: 3.5rem;
+    font-family: 'Nanum Gothic', sans-serif;
+    }
+    
+    .doHyeon{
+        font-family:'Do Hyeon', sans-serif;
+    }
+    
+    .blackHanSans{
+        font-family: 'Black Han Sans', sans-serif;
+    }
+    
+    /* 득점순위 눌렀을 때 */
+    .goalAverage > .scoreRank{
+        display:none;
+    }
+    
+    .goalAverage > .gaRank{
+        display: block;
+    }
+    
+    .gaRank{
+        display:none;
     }
 
-    table, td, th{
+    .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+    a.alram:hover{
+        background-color:peru !important;
+        text-decoration: none;
+    }
+    .alarm{
+        background-color: #EDF2F9;
+    }
+    
+    @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+        }
+    
+        table, td, th{
+            text-align: left;
+        }
+    
+        .label{
+        margin-top: 8px;
+        margin-left:5px;
+        }
+    
+    }
+    
+    .nav-link:hover{
+        border-bottom: brown solid 2px;
+    }
+    .nav-link{
+        font-size:25px;
+        font-family: 'Nanum Pen Script';
+        margin-right: 2em;
+    }
+    .down {
+        position: relative;
+        display: inline-block;
+    }
+    
+    .down-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        padding: 12px 16px;
+        z-index: 1;
+    }
+    .down:hover .down-content {
+        display: block;
+    }
+    .dropup {
+        position: relative;
+        display: inline-block;
+    }
+    
+    .dropup-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        bottom: 50px;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        padding: 12px 16px;
+        z-index: 1;
+    }
+    .dropup:hover .dropup-content {
+        display: block;
+    }
+    .a{
+        text-decoration: none;
+        font-family: 'Nanum Gothic';
+    }
+    .information{
+        padding:4em;
+        padding-bottom: 5%;
+        background-image: linear-gradient(72deg, #1e3c72, #2a5298);
+        /* background-image: linear-gradient(72deg, #457fca, #5691c8); */
+    }
+    .footer{
+        background-color: #23262E;
+        margin:0;
+        padding: 3%;
+        color: #f9f9f9;
+        font-family: 'Noto Sans KR';
+    }
+    .schedule{
+        border-top:3%;
+        background-image: linear-gradient(72deg, #ED213A, #93291E);
+        padding:40px;
+    }
+
+    .contentsDesign{
+        max-width: 720px;
+        margin:0 auto;
+    }
+    
+    #calendar td {
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Noto Sans KR';
+    border-radius:8px;
+    }
+    
+    #calendar{
+        background-color:white;
+        border-radius:8px;
+    }
+    
+    .aboveFooter{
+        /* background-image:url("{% static 'aboveFooter.png' %}"); */
+        background-color: grey;
+        background-size: 100% 100%;
+        height: 300px;
+        color:white;  
+    }
+    
+    .futsalDay{
+        background-color:#EAECF0; 
+        padding: 5%; 
+        height: 100%; 
+        width:100%;
+        border-radius: 8px;
+    }
+    
+    .personalMatch td{
         text-align: left;
     }
-
-    .label{
-    margin-top: 8px;
-    margin-left:5px;
+    .personalMatching{
+        background-image: url("{% static 'personalMatching.png' %}");
+        padding-top:20px;
+        background-size: 100% 100%;
+        height: 300px;
+        vertical-align: middle;
     }
-
-}
-
-.nav-link:hover{
-    border-bottom: brown solid 2px;
-}
-.nav-link{
-    font-size:25px;
-    font-family: 'Nanum Pen Script';
-    margin-right: 2em;
-}
-.down {
-    position: relative;
-    display: inline-block;
-}
-
-.down-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-}
-.down:hover .down-content {
-    display: block;
-}
-.dropup {
-    position: relative;
-    display: inline-block;
-}
-
-.dropup-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    bottom: 50px;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-}
-.dropup:hover .dropup-content {
-    display: block;
-}
-.a{
-    text-decoration: none;
-    font-family: 'Nanum Gothic';
-}
-.information{
-    padding:4em;
-    padding-bottom: 5%;
-    background-image: linear-gradient(72deg, #1e3c72, #2a5298);
-    /* background-image: linear-gradient(72deg, #457fca, #5691c8); */
-}
-.footer{
-    background-color: #23262E;
-    margin:0;
-    padding: 3%;
-    color: #f9f9f9;
-    font-family: 'Noto Sans KR';
-}
-.schedule{
-    border-top:3%;
-    background-image: linear-gradient(72deg, #ED213A, #93291E);
-    padding:40px;
-}
-
-#calendar td {
-width: 60px;
-height: 60px;
-text-align: center;
-font-size: 20px;
-font-family: 'Noto Sans KR';
-border-radius:8px;
-}
-
-#calendar{
-    background-color:white;
-    border-radius:8px;
-}
-
-.aboveFooter{
-    /* background-image:url("{% static 'aboveFooter.png' %}"); */
-    background-color: grey;
-    background-size: 100% 100%;
-    height: 300px;
-    color:white;  
-}
-
-.futsalDay{
-    background-color:#EAECF0; 
-    padding: 5%; 
-    height: 100%; 
-    width:100%;
-    border-radius: 8px;
-}
-
-.personalMatch td{
-    text-align: left;
-}
-.personalMatching{
-    background-image: url("{% static 'personalMatching.png' %}");
-    padding-top:20px;
-    background-size: 100% 100%;
-    height: 300px;
-    vertical-align: middle;
-}
-.between{
-    /* background-image: linear-gradient(72deg, #ED213A, #93291E); */
-    background-color: #CD1F33;
-    margin-bottom:20px;
-}
-.between span{
-    height:50px;
-    font-family: 'Nanum Gothic';
-    vertical-align: middle;
-    font-size: 20px;
-    color:white;
-    font-weight: bold;
-    border-right:darkgray 2px solid;
-    border-left:darkgray 2px solid;
-    padding-top: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-.new:hover{
-    border-bottom: 2px solid blue;
-    background-color: brown;
-}
-label{
-    font-family: 'Jua';
-    text-align: center;
-    font-size:20px;
-}
-.teamMatching{
-    background-image: url("{% static 'teamMatching.png' %}");
-    padding-top:20px;
-    background-size: 100% 100%;
-    height: 300px;
-    vertical-align: middle;
-}
-.recruiting{
-    background-image: url("{% static 'recruiting.png' %}");
-    padding-top:20px;
-    background-size: 100% 100%;
-    height: 300px;
-    vertical-align: middle;
-}
-.league{
-    background-image: url("{% static 'league.png' %}");
-    padding-top:20px;
-    background-size: 100% 100%;
-    height: 300px;
-    vertical-align: middle;
-}
-.team{
-    background-image: url("{% static 'team.png' %}");
-    padding-top:20px;
-    background-size: 100% 100%;
-    height: 300px;
-    vertical-align: middle;
-}
-#changeCaptain{
-    display:none;
-}
-.captain > #changeCaptain{
-    display:block;
-}
-.rank{
-    background-image: url("{% static 'rank.png' %}");
-    padding-top:20px;
-    background-size: 100% 100%;
-    height: 300px;
-    vertical-align: middle;
-}
-.decidedMatch{
-    background-image: url("{% static 'decidedMatch.png' %}");
-    padding-top:20px;
-    background-size: 100% 100%;
-    height: 300px;
-    vertical-align: middle;
-}
-.result{
-    background-image: url("{% static 'result.png' %}");
-    padding-top:20px;
-    background-size: 100% 100%;
-    height: 300px;
-    vertical-align: middle;
-}
-.myPage{
-    background-image: linear-gradient(72deg, #ADA996, #F2F2F2, #DBDBDB, #EAEAEA);
-    margin-top:0px;
-}
-.customerService{
-    background-image: url("{% static 'customerService.png' %}");
-    padding-top:20px;
-    background-size: 100% 100%;
-    height: 300px;
-    vertical-align: middle;
-}
-.csButton {
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    background-color:#4272B4;
-    color: white;
-}
-
-.csButton:hover {
-    background-color: white;
-    border:2px solid #4272B4;
-    color: black;
-}
-
-/* alarm css */
-.badge1 {
-        position:relative;
-}
-.badge1[data-badge]:after {
-    content:attr(data-badge);
-    position:absolute;
-    top:-10px;
-    right:-10px;
-    font-size:.7em;
-    background:red;
-    color:white;
-    width:20px;height:20px;
-    text-align:center;
-    line-height:18px;
-    border-radius:50%;
-    box-shadow:0 0 1px #333;
-}
-
-/* Dropdown Button */
-.dropbtn {
-    /* background-color: #3498DB; */
-    background-image:url("{% static 'checkedAlarm.png' %}");
-    background-size:100% 100%;
-    height: 25px;
-    width:25px;
-    color: black;
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-    /* background-color: #2980B9; */
-    background-color: white;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.alarmDropdown {
-    position: relative;
-    display: inline-block;
-    float: right;
+    .between{
+        /* background-image: linear-gradient(72deg, #ED213A, #93291E); */
+        background-color: #CD1F33;
+        margin-bottom:20px;
+    }
+    .between span{
+        height:50px;
+        font-family: 'Nanum Gothic';
+        vertical-align: middle;
+        font-size: 20px;
+        color:white;
+        font-weight: bold;
+        border-right:darkgray 2px solid;
+        border-left:darkgray 2px solid;
+        padding-top: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .new:hover{
+        border-bottom: 2px solid blue;
+        background-color: brown;
+    }
+    label{
+        font-family: 'Jua';
+        text-align: center;
+        font-size:20px;
+    }
+    .teamMatching{
+        background-image: url("{% static 'teamMatching.png' %}");
+        padding-top:20px;
+        background-size: 100% 100%;
+        height: 300px;
+        vertical-align: middle;
+    }
+    .recruiting{
+        background-image: url("{% static 'recruiting.png' %}");
+        padding-top:20px;
+        background-size: 100% 100%;
+        height: 300px;
+        vertical-align: middle;
+    }
+    .league{
+        background-image: url("{% static 'league.png' %}");
+        padding-top:20px;
+        background-size: 100% 100%;
+        height: 300px;
+        vertical-align: middle;
+    }
+    .team{
+        background-image: url("{% static 'team.png' %}");
+        padding-top:20px;
+        background-size: 100% 100%;
+        height: 300px;
+        vertical-align: middle;
+    }
+    #changeCaptain{
+        display:none;
+    }
+    .captain > #changeCaptain{
+        display:block;
+    }
+    .rank{
+        background-image: url("{% static 'rank.png' %}");
+        padding-top:20px;
+        background-size: 100% 100%;
+        height: 300px;
+        vertical-align: middle;
+    }
+    .decidedMatch{
+        background-image: url("{% static 'decidedMatch.png' %}");
+        padding-top:20px;
+        background-size: 100% 100%;
+        height: 300px;
+        vertical-align: middle;
+    }
+    .result{
+        background-image: url("{% static 'result.png' %}");
+        padding-top:20px;
+        background-size: 100% 100%;
+        height: 300px;
+        vertical-align: middle;
+    }
+    .myPage{
+        background-image: linear-gradient(72deg, #ADA996, #F2F2F2, #DBDBDB, #EAEAEA);
+        margin-top:0px;
+    }
+    .customerService{
+        background-image: url("{% static 'customerService.png' %}");
+        padding-top:20px;
+        background-size: 100% 100%;
+        height: 300px;
+        vertical-align: middle;
+    }
+    .csButton {
+        -webkit-transition-duration: 0.4s; /* Safari */
+        transition-duration: 0.4s;
+        background-color:#4272B4;
+        color: white;
+    }
     
-}
-
-/* Dropdown Content (Hidden by Default) */
-.alarmDropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 350px;
-    max-width: 350px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    right:0;
-}
-
-/* Links inside the dropdown */
-.alarmDropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    font-size: 12px;
-}
-
-/* Change color of dropdown links on hover */
-.alarmDropdown-content a:hover {background-color: #ddd}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
-
-.alarm{
-    background-color: rgb(191, 214, 252);
-    text-overflow: ellipsis;
-}
-.aboveFooterText{
-    font-family: 'Do Hyeon'; 
-    color:blanchedalmond;
-}
-.text-stroke {
-    text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;  
-}
-.personalDetail{
-    border-left:silver 2px solid;
-}
-
-@media screen and (max-width: 600px){
-    .aboveFooterText{
-    font-family: 'Do Hyeon'; 
-    color:blanchedalmond;
-    font-size: 20px;
+    .csButton:hover {
+        background-color: white;
+        border:2px solid #4272B4;
+        color: black;
     }
+    
+    /* alarm css */
+    .badge1 {
+            position:relative;
+    }
+    .badge1[data-badge]:after {
+        content:attr(data-badge);
+        position:absolute;
+        top:-10px;
+        right:-10px;
+        font-size:.7em;
+        background:red;
+        color:white;
+        width:20px;height:20px;
+        text-align:center;
+        line-height:18px;
+        border-radius:50%;
+        box-shadow:0 0 1px #333;
+    }
+    
+    /* Dropdown Button */
+    .dropbtn {
+        /* background-color: #3498DB; */
+        background-image:url("{% static 'checkedAlarm.png' %}");
+        background-size:100% 100%;
+        height: 25px;
+        width:25px;
+        color: black;
+        padding: 10px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+    }
+    
+    /* Dropdown button on hover & focus */
+    .dropbtn:hover, .dropbtn:focus {
+        /* background-color: #2980B9; */
+        background-color: white;
+    }
+    
+    /* The container <div> - needed to position the dropdown content */
+    .alarmDropdown {
+        position: relative;
+        display: inline-block;
+        float: right;
+        
+    }
+    
+    /* Dropdown Content (Hidden by Default) */
     .alarmDropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 350px;
-    max-width: 350px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    right:-90px;
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 350px;
+        max-width: 350px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        right:0;
+    }
+    
+    /* Links inside the dropdown */
+    .alarmDropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        font-size: 12px;
+    }
+    
+    /* Change color of dropdown links on hover */
+    .alarmDropdown-content a:hover {background-color: #ddd}
+    
+    /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+    .show {display:block;}
+    
+    .alarm{
+        background-color: rgb(191, 214, 252);
+        text-overflow: ellipsis;
+    }
+    .aboveFooterText{
+        font-family: 'Do Hyeon'; 
+        color:blanchedalmond;
+    }
+    .text-stroke {
+        text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;  
     }
     .personalDetail{
-    border-left:none;
-    padding-left: none;
+        border-left:silver 2px solid;
     }
-    .tableControl{
-    font-size: 14px;
+    
+    @media screen and (max-width: 600px){
+        .aboveFooterText{
+        font-family: 'Do Hyeon'; 
+        color:blanchedalmond;
+        font-size: 20px;
+        }
+        .alarmDropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 350px;
+        max-width: 350px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        right:-90px;
+        }
+        .personalDetail{
+        border-left:none;
+        padding-left: none;
+        }
+        .tableControl{
+        font-size: 14px;
+        }
+        .textDetail{
+            font-size:14px ;
+        }
+        .textDetail2{
+            font-size:12px ;
+        }
+        .footer p{
+            font-size: 10px;
+        }
     }
-    .textDetail{
-        font-size:14px ;
-    }
-    .textDetail2{
-        font-size:12px ;
-    }
-    .footer p{
-        font-size: 10px;
-    }
-}
