--- a/FNSProject/templates/navbar.html
+++ b/FNSProject/templates/navbar.html
@@ -21,7 +21,7 @@
           <a class="nav-link" href="{% url 'playground_list' %}">구장대관<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'personal' %}">개인매칭</a>
+          <a class="nav-link" href="{% url 'play' %}">플레이</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'teamMatching' %}" tabindex="-1" aria-disabled="true">팀매칭</a>
